# DATA0031182017-assignments

./: README.md
lab1/: README.md  dorm_manager.py
第一次作业/: README.md  students.json
第七次作业/: README.md  pyproject.toml
第七次作业/data/: cleaned_records.meta.json
第七次作业/logs/: predicted_ranks.json  ranking_metrics.json
第七次作业/scripts/: predict_rank.py  train_ranking.py
第七次作业/src/: data_processing.py  metrics.py
第三次作业/: README.md  analysis.py  package-lock.json  package.json  scrape-esi.js
第三次作业/csv/: df_sorted_by_citations.csv  df_sorted_by_cpp.csv  esi_fields_of_East_China_Normal_University.csv  esi_institutions_by_Agricultural_Sciences.csv  esi_institutions_by_Biology_and_Biochemistry.csv  esi_institutions_by_Physics.csv  (+21 more)
第二次作业/: README.md  lab2.ipynb
第五次作业/: README.md  pyproject.toml  q10_model_analysis.py  q10_ranking_prediction.py  q8_cluster_analysis.py  q8_university_clustering.py  q9_ecnu_analysis.py  q9_final_summary.py  q9_visualization.py
第六次作业/: README.md  pyproject.toml
第六次作业/data/: institution_summary.json
第六次作业/logs/: cluster_assignments.json  cluster_similar_ecnu.json  predicted_ranks.json  ranking_metrics.json
第六次作业/scripts/: cluster_institutions.py  export_data.py  predict_rank.py  train_ranking.py
第六次作业/src/: ranking_data.py  ranking_model.py
第四次作业/: README.md  create_staging_table.sql  create_tables.sql  docker-compose.yml  import_data.sh  insert_fields.sql  migrate_rankings.sql  migrate_universities.sql  query_china_performance.sql  query_ecnu_rankings.sql  query_global_analysis.sql  query_top_regions.sql  verification_queries.sql
(+1 files in other folders)
